# NL_SQL

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  audit_codex_12_05_26.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
chroma_data/: chroma.sqlite3
chroma_data/ca27b178-a0bb-4755-9ac6-d4e35ecf7f25/: index_metadata.pickle
docs/: 00_task.md  01_architecture.md  02_architecture_v2.md  03_eval_methodology.md  NEXT_SESSION.md  SESSION_HANDOFF.md  bird_sota_research.md  codex_v9_residue_analysis.md  corrected_gold_evaluation.md  kimi_v9_residue_analysis.md  p3f_design.md  v11_saturation_evidence.md  v9_residue_analysis_quick.md
eval/: demo_benchmark.json
eval/baselines/: hybrid_n200_v0.json
eval/reports/2026-05-10/: A_full_schema-n50.json  A_full_schema.json  C_dense_cards-fkhops2.json  C_dense_cards-mixture-s3-5-n50.json  C_dense_cards-n50.json  C_dense_cards-smoke-n20.json  C_dense_cards.json  (+10 more)
eval/reports/2026-05-10-precache/: index.html
reviews/: _prompt.md  codex_review.md  kimi_review.md
scripts/: audit_rescore.py  build_fewshot_index.py  build_index.py  download_data.py  ensemble_vote.py  error_taxonomy.py  eval_baseline.py  eval_demo.py  merge_hybrid_eval.py  merge_voting_rescues.py  rescore_arcwise.py  run_critique_retry.py  run_groq_voting.py  run_helallao_voting.py  run_planner_eval.py  run_selfcon_retry.py  run_sonnet_voting.py  run_wide_schema_retry.py  smoke_pipeline.py  smoke_schema_recall.py
scripts/sql/: postgres_init.sql
src/nl_sql/: __init__.py
tests/: conftest.py  test_agent_graph.py  test_agent_nodes.py  test_agent_support.py  test_api_healthz.py  test_db_connection.py  test_db_registry.py  test_execution_guards.py  test_execution_runner.py  test_llm_cache.py  test_provider_embed.py  test_provider_factory.py  test_provider_generate.py  test_provider_groq.py  test_provider_protocols.py  test_render_labels.py  test_render_picker.py  test_schema_index_chunker.py  test_schema_index_indexer.py  test_schema_index_introspector.py  test_schema_index_retriever.py  test_streamlit_cloud_dependencies.py
tests/agent/: test_graph.py
tests/api/: test_api_routes.py
tests/eval/: test_dataset.py  test_metrics.py  test_runner.py  test_self_consistency.py
tests/llm/: test_perplexity_provider.py
tests/scripts/: test_build_index.py  test_ensemble_vote.py  test_requirements_pinned.py
(+156 files in other folders)
